# Time-Pilot

./: .gitignore  README.md
TimePilot-16bit-C/: CMakeLists.txt  README.md
TimePilot-16bit-C/src/: ai.c  audio.c  audio.h  collide.c  data.c  data.h  draw.c  draw.h  erase.c  erase.h  game.c  globals.c  globals.h  input.c  input.h  main.c  print.c  print.h  screen.c  screen.h  text.c  text.h  things.c  things.h  tigr.c  tigr.h  ui.c  ui.h  version.cmake.h
TimePilot-CX16/: CMakeLists.txt  README.md  tpfont.vrm  tpspr.vrm
TimePilot-CX16/assets/: bank001.au  bank002.au  bank003.au  bank004.au  bank005.au  bank006.au  bank007.au  bank008.au  bank009.au  bank010.au  bank011.au  bank012.au  bank013.au  bank014.au  bank015.au  bank016.au  bank017.au  bank018.au  bank019.au  bank020.au  bank021.au  bank022.au  bank023.au  bank024.au  bank025.au  bank026.au  bank027.au  bank028.au  bank029.au  bank030.au  bank031.au  bank032.au  bank033.au  bank034.au  bank035.au  bank036.au  bank037.au  bank038.au  bank039.au  bank040.au  (+3 more)
TimePilot-CX16/audio/: big_explosion.pcm  bomb.pcm  bossl0.pcm  bossl1.pcm  bossl2.pcm  bossl3.pcm  coindrop.pcm  enemy_explode.pcm  enemy_shoot.pcm  extra_life.pcm  game_start.pcm  highscore.pcm  next_level.pcm  pickup.pcm  player_shoot.pcm  rocket_fly.pcm  rocket_launch.pcm  timewarp.pcm  wapon_explode.pcm  wave_start.pcm
TimePilot-CX16/misc/: TIME-PILOT.ABM  TIME-PILOT.INF  audio.txt  convert.txt  font.txt  launch_point_calcs_cx16.xlsx  mkaudio.py  mkvram.py  palette-thumb.txt  palette.txt  rays_table_calcs.xlsx  thumb.txt
TimePilot-CX16/src/: ai.c  ai.h  audio.c  audio.h  collide.c  collide.h  data.c  data.h  draw.c  draw.h  erase.c  erase.h  game.c  game.h  globals.c  globals.h  input.c  input.h  main.c  main.h  print.c  print.h  screen.c  screen.h  text.c  text.h  things.c  things.h  ui.c  ui.h
TimePilot-IIgs/: .gitignore  Makefile  Makefile.macos  README.md  _FileInformation.txt  mame.dbg
TimePilot-IIgs/Icons/: TimePilot.icon  _FileInformation.txt
TimePilot-IIgs/appleIIgs/: 800K-template.po
TimePilot-IIgs/cadius.for.mac/: cadius.mac
TimePilot-IIgs/history/: ReadMeFirst  _FileInformation.txt
TimePilot-IIgs/misc/: convert.txt  hardware_prep.py  mkspr.py  palette.txt
TimePilot-IIgs/snd/: Finder.Data  _FileInformation.txt  bigexplo.new  bigexplo.snd  bomb.snd  boomerang.snd  bossl0.snd  bossl1.snd  bossl2.snd  bossl3.snd  coindrop.snd  eneexplode.snd  eneshoot.snd  extralife.snd  gamestart.new  gamestart.snd  highscore.snd  nextlevel.snd  pickup.snd  playershoot.snd  rockfly.snd  rocklaunch.snd  soundbank  stageclear.snd  timewarp.snd  wapexplode.snd  wavestart.snd
TimePilot-IIgs/src/: ai.asm  audio.asm  collide.asm  data.asm  draw.asm  erase.asm  game.asm  globals.s  input.asm  loader.asm  main.asm  print.asm  screen.asm  sprblank.asm  text.asm  things.asm  ui.asm  variables.asm
TimePilot-IIgs/src/macros/: macros.s
TimePilot-IIgs/src/sprites/: DATCLOUD.asm  DATEXPLD.asm  DATLEVL0.asm  DATLEVL1.asm  DATLEVL2.asm  DATLEVL3.asm  DATLEVL4.asm  DATSHARE.asm  SPRCLOUD.asm  SPREXPLD.asm  SPRLEVL0.asm  SPRLEVL1.asm  SPRLEVL2.asm  SPRLEVL3.asm  SPRLEVL4.asm  SPRSHARE.asm  SPRTEXT.asm
TimePilot-Mac68k/: BasiliskII_prefs  CMakeLists.txt  CMakePresets.json  README.md  vMac.sh
TimePilot-Mac68k/misc/: audio.txt  convert.txt  palette.txt  resman.py
TimePilot-Mac68k/src/: ai.c  ai.h  audio.c  audio.h  audio.r  collide.c  collide.h  data.c  data.h  draw.c  draw.h  erase.c  erase.h  game.c  game.h  globals.c  globals.h  input.c  input.h  mac.c  mac.h  main.c  main.h  print.c  print.h  resids.h  screen.c  screen.h  sprite.c  sprite.h  text.c  text.h  things.c  things.h  timepilot.r  tpr.r  ui.c  ui.h  update.c  update.h
